--- a/assets/shareloc/app/index.html
+++ b/assets/shareloc/app/index.html
@@ -81,6 +81,7 @@
         <script src="scripts/services/settingsservice.js"></script>
         <script src="scripts/services/facebookservice.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/share.js"></script>
         <!-- endbuild -->
 </body>
 </html>
